# cc-statusline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
configs/: config.template.toml
npm/ccsp/: index.js  install.js  package.json
src/: lib.rs
src/api/: client.rs  mod.rs  types.rs
src/components/: mod.rs  progress_bar.rs  rate_limit.rs  tokens.rs
src/config/: mod.rs  schema.rs
src/core/: generator.rs
src/storage/: mod.rs  rate_limit_cache.rs
tests/: integration_test.rs
