[package]
name = "claude-code-statusline-pro"
version = "3.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["zach19"]
license = "MIT"
description = "Enhanced statusline for Claude Code with 10x performance"
repository = "https://github.com/kzj1867-spec/cc-statusline"
homepage = "https://github.com/kzj1867-spec/cc-statusline"
readme = "README.md"
keywords = ["cli", "statusline", "claude", "terminal", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.6.0", features = ["derive", "env", "cargo", "color"] }

# Configuration & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.25.10", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Terminal handling
crossterm = "0.29.0"

# System utilities
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
regex = "1.12"
async-trait = "0.1"
dialoguer = "0.12.0"
jsonpath_lib = "0.3"
ureq = { version = "2.12", default-features = false, features = [
    "json",
    "tls",
] }
dateparser = "0.3"

# Git integration
git2 = { version = "0.20.4", default-features = false, features = [
    "https",
    "ssh",
    "vendored-libgit2",
    "vendored-openssl",
] }

# Async runtime (for async config loading and file operations)
tokio = { version = "1.51", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
pretty_assertions = "1.4"
tempfile = "3.27"
proptest = { version = "1.11", default-features = false, features = ["std"] }
serial_test = "3.4"
tokio = { version = "1.51", features = ["rt", "macros", "test-util"] }
assert_cmd = "2.2"
predicates = "3.1"

[[bin]]
name = "claude-code-statusline-pro"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
